--- a/index.html
+++ b/index.html
@@ -22,5 +22,17 @@
     <img src="images/beets.jpg" alt="">
     <figcaption>A bundle of organic beets from a local farm food co-op program.
     </figure>
+<p>
+  <data> 55 to 65 </data> days are needed from germination to harvest of the root.
 
+  The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
+  <br>
+  <br>
+  In fact, <cite>Jim Halpert</cite> once said this about beets, <smallquote>“Fact, bears eat beets. Bears, beets, <em>Battlestar Galactica</em>”.</smallquote>
+<br>
+<br>
+<blockquote>I have some <em>weird</em> habits. For instance, <b>I love beets</b>. Show me a salad bar and I will clean them out of their beets.
+<br>
+<cite>— Chris Pratt</cite></blockquote>
+</p>
 </html>
