--- a/index.html
+++ b/index.html
@@ -6,33 +6,51 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-  <!--All the HTML content goes in here-->
-  <header>
-    <h1><strong> Beetroot <i>(Beta vulgaris) </i> </h1>
-  </header>
-  <ul>
+   <!--All the HTML content goes in here-->
+   <header>
+    <h1>Beetroot <i>(Beta vulgaris)</i></h1>
+   </header>
+   <ul>
     <nav>
       <li><a href="#">Common varieties</a></li>
       <li><a href="#">Nutritional information</a></li>
       <li><a href="#">Tags</a></li>
-  </ul>
-</nav>
+    </nav>
+   </ul>
 </body>
-<figure>
-    <img src="images/beets.jpg" alt="">
-    <figcaption>A bundle of organic beets from a local farm food co-op program.
-    </figure>
+  <figure><img src="images/beets.jpg" alt="">
+     <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
+  </figure>
 <p>
-  <data> 55 to 65 </data> days are needed from germination to harvest of the root.
-
-  The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
-  <br>
-  <br>
-  In fact, <cite>Jim Halpert</cite> once said this about beets, <smallquote>“Fact, bears eat beets. Bears, beets, <em>Battlestar Galactica</em>”.</smallquote>
-<br>
-<br>
-<blockquote>I have some <em>weird</em> habits. For instance, <b>I love beets</b>. Show me a salad bar and I will clean them out of their beets.
-<br>
-<cite>— Chris Pratt</cite></blockquote>
-</p>
+   55 to 65 days are needed from germination to harvest of the root.
+    The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
+    In fact, <cite>Jim Halpert</cite> once said this about beets, <q>Fact, bears eat beets. Bears, beets, <em>Battlestar Galactica</em>.</q>
+   <blockquote>I have some <em>weird</em> habits. For instance, <b>I love beets</b>. Show me a salad bar and I will clean them out of their beets.
+   <cite>— Chris Pratt</cite></blockquote>
+ <h2>Common varieties</h2>
+  <ol>
+    <li>Albino</li>
+    <li>Awesome</li>
+    <li>Chioggia</li>
+    <li>Detroit Dark Red</li>
+    <li>Early Wonder</li>
+  </ol>
+<h2>Nutritional information</h2>
+    <p> Serving size: 100 g </p>
+ <dl>
+    <dt>Energy: 180 g </dt>
+    <dt>Carbohdrates: 9.96 g </dt>
+    <dt>Fat: 0.18 g</dt>
+    <dt>Protein: 1.68 g</dt>
+ </dl>
+<h2>Tags</h2>
+  <ul>
+    <li>Crimson</li>
+    <li>Awesome</li>
+    <li>Pickle-able</li>
+    <li>Vegetable!</li>
+    <li>Delicious</li>
+  </ul>
+  Source: <a href="https://wikipedia.org">Wikipedia</a>
+  <small>Last modified:<time>Aug 30, 2014</time></small>
 </html>
